# obsidian-auto-tagger

./: .env.example  .gitignore  CLAUDE.md  README.ko.md  README.md  obsidian-universal-tagger-implementation-plan.md  pyproject.toml
.claude/: settings.json
auto_tagger/: __init__.py  __main__.py  classifier.py  cli.py  config.py  note_parser.py  progress.py  scanner.py  tag_inserter.py  taxonomy.py
tests/: test_classifier.py  test_config.py  test_note_parser.py  test_progress.py  test_scanner.py  test_tag_inserter.py  test_taxonomy.py
tests/fixtures/: custom_tags_note.md  inbox_long.md  literature_standard.md  literature_tagged.md  malformed.md  no_tags_note.md  reading_note_sample.md  resources_content.md  resources_embed.md
